added another game, a homepage with links to the games

--- a/style.css
+++ b/style.css
@@ -3,12 +3,8 @@ body, html {
   }
   .bg {
     /* The image used */
-    background-image: url("zombieApoc.jpg");
+    background-image: url("beanstalk-dark.png");
     /* Adjust height */
     height: 100%;
   
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
   }
