adding folders for files

--- a/css/zombie.css
+++ b/css/zombie.css
@@ -3,7 +3,7 @@ body, html {
   }
   .bg {
     /* The image used */
-    background-image: url("zombieApoc.jpg");
+    background-image: url("images/zombieApoc.jpg");
     /* Adjust height */
     height: 100%;
   
