--- a/css/zombie.css
+++ b/css/zombie.css
@@ -3,7 +3,7 @@ body, html {
   }
   .bg {
     /* The image used */
-    background-image: url("/Assets/Images/zombieApoc.jpg");
+    background-image: url("../zombieApoc.jpg");
     /* Adjust height */
     height: 100%;
   
