--- a/Style/style.css
+++ b/Style/style.css
@@ -3,8 +3,9 @@ body, html {
   }
   .bg {
     /* The image used */
-    background-image: url("../beanstalk-dark.png");
+    background-image: url("/images/beanstalk-dark.png");
     /* Adjust height */
     height: 100%;
   
   }
+
