--- a/assets/css/zombie.css
+++ b/assets/css/zombie.css
@@ -3,7 +3,7 @@ body, html {
   }
   .bg {
     /* The image used */
-    background-image: url("/assets/images/zombie.JPG");
+    background-image: url("../images/zombie.jpg");
     /* Adjust height */
     height: 100%;
   
